# job-hunter

./: .env.example  .gitignore  AGENTS.md  README.md  drizzle.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.agents/: HANDOFF.json  ROADMAP.md  STATE.md
app/: app.css  env.server.ts  root.tsx  routes.ts
drizzle/: 0000_aberrant_hellcat.sql  0000_third_raza.sql  0001_supreme_cannonball.sql  0002_colossal_forge.sql  0003_hesitant_wither.sql  0004_lively_squirrel_girl.sql  0005_cultured_the_fury.sql
python-bridge/: fingerprint.py  package.json  pyproject.toml  serve.py
python-bridge/scripts/: gen-fingerprint.py
scripts/: _env.ts  apply-hh.ts  collect-hh.ts  collect-telegram.ts  collect-wellfound.ts  dump-hh-apply-form.ts  dump-hh-resumes.ts  dump-wellfound-html.ts  explore-apply-form.ts  fix-telegram-exclude.ts  generate-drafts.ts  hh-login.ts  list-vacancies.ts  map-hh-resumes.ts  match.ts  scheduler.ts  seed-hh.ts  seed-telegram.ts  seed-wellfound.ts  smoke-check-apply.ts  smoke-drafts.ts  smoke-hh-session.ts  smoke-match.ts  smoke-scheduler.ts  smoke-zai.ts  stealth-check.ts  telegram-login.ts  wellfound-login.ts
tests/: ai-zai.test.ts  apply-throttle.test.ts  browser-launcher.test.ts  browser-session.test.ts  generate-cover-letter.test.ts  generate-drafts.test.ts  hh-apply.test.ts  hh-collect.test.ts  hh-filter.test.ts  hh-human.test.ts  hh-parsers.test.ts  hh-resume-mapping-repo.test.ts  index-route.test.ts  jobs-repo.test.ts  jobs-route.test.ts  matcher-match.test.ts  matcher-prefilter.test.ts  review-ui.test.ts  (+17 more)
(+118 files in other folders)
